Fix for iOS theming: * Long qx.Mobile SelectBox captions caused an overlap into selection tick.

--- a/framework/source/resource/qx/mobile/css/android.css
+++ b/framework/source/resource/qx/mobile/css/android.css
@@ -653,7 +653,7 @@ li:first-child:not(.formRowGroupFirstItem), li:first-child a {
   width: 15px;
   height: 8px;
   background: transparent;
-  right: 4px;
+  right: 2px;
   border: 4px solid black;
   border-top: 0;
   border-right: 0;
