--- a/framework/source/resource/qx/mobile/css/indigo.css
+++ b/framework/source/resource/qx/mobile/css/indigo.css
@@ -887,7 +887,7 @@ input[type=radio]:checked + label:after {
   width: 15px;
   height: 8px;
   background: transparent;
-  right: 4px;
+  right: 2px;
   border: 4px solid black;
   border-top: 0;
   border-right: 0;
